<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutRegister"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1" >

    <TextView
        android:id="@+id/RegistrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/RegistrationTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/RegistrationNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/RegistrationNameTitle" android:layout_marginLeft="10dp"/>

            <requestFocus />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/RegistrationNameBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:lines="1"
        android:maxLength="10"
        android:maxLines="1" android:inputType="text"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/RegistrationPasswordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RegistrationPasswordTitle" android:layout_gravity="left" android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/RegistrationPasswordBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" android:layout_gravity="center_horizontal" android:layout_marginBottom="20dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/RegistrationRegButton"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"
        android:onClick="onClickRegister"
        android:text="@string/RegistrationRegButtonTitle" android:layout_margin="10dp"/>

</LinearLayout>